Реализован поиск трекеров по слову

--- a/Tracker/App/Resources/en.lproj/Localizable.strings
+++ b/Tracker/App/Resources/en.lproj/Localizable.strings
@@ -46,3 +46,4 @@
 "enter_the_category_name" = "Enter the name of the category";
 "statistics" = "Statistics";
 "every_day" = "Every day";
+"nothing_was_found" = "Nothing was found";
