--- a/Tracker/App/Resources/ru.lproj/Localizable.strings
+++ b/Tracker/App/Resources/ru.lproj/Localizable.strings
@@ -46,3 +46,4 @@
 "enter_the_category_name" = "Введите название категории";
 "statistics" = "Статистика";
 "every_day" = "Каждый день";
+"nothing_was_found" = "Ничего не найдено";
