--- a/Tracker/App/Resources/en.lproj/Localizable.strings
+++ b/Tracker/App/Resources/en.lproj/Localizable.strings
@@ -47,3 +47,5 @@
 "statistics" = "Statistics";
 "every_day" = "Every day";
 "nothing_was_found" = "Nothing was found";
+"there_is_nothing_to_analyze_yet" = "There is nothing to analyze yet";
+"trackers_completed" = "Trackers completed";
