Редактирование и удаление трекера

--- a/Tracker/App/Resources/en.lproj/Localizable.strings
+++ b/Tracker/App/Resources/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "these_are_the_technologies" = "These are technologies!";
 
 "new_habit" = "New habit";
+"edit_habit" = "Editing a Habit";
 "cancel" = "Cancel";
 "create" = "Create";
 "emoji" = "Emoji";
