--- a/Tracker/App/Resources/ru.lproj/Localizable.strings
+++ b/Tracker/App/Resources/ru.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "these_are_the_technologies" = "Вот это технологии!";
 
 "new_habit" = "Новая привычка";
+"edit_habit" = "Редактирование привычки";
 "cancel" = "Отменить";
 "create" = "Создать";
 "emoji" = "Emoji";
